tests/snapshots/wld__parse_footer.snap
---
source: tests/wld.rs
expression: PARSED_WORLD.footer
---
Footer {
    name: TString(
        "Foon",
    ),
    id: 1468463142,
}
