tests/snapshots/wld__parse_header.snap
---
source: tests/wld.rs
expression: PARSED_WORLD.header
---
Header {
    version: "1.3.5.3",
    revision: 160,
    is_favorite: false,
    offsets: Offsets {
        header: 127,
        tiles: 2802,
        chests: 2860224,
        signs: 2879758,
        npcs: 2880141,
        tile_entities: 2880453,
        pressure_plates: 2880457,
        town_manager: 2880461,
        footer: 2880489,
    },
}
