tests/snapshots/wld__parse_houses.snap
---
source: tests/wld.rs
expression: PARSED_WORLD.houses
---
HouseVec(
    [
        House {
            entity_type: Guide,
            position: Position {
                x: 1932,
                y: 388,
            },
        },
        House {
            entity_type: Dd2bartender,
            position: Position {
                x: 2159,
                y: 230,
            },
        },
    ],
)
