tests/snapshots/wld__parse_npcs.snap
---
source: tests/wld.rs
expression: PARSED_WORLD.npcs
---
NPCVec(
    [
        NPC {
            entity_type: OldMan,
            position: Point {
                x: 54816,
                y: 3336,
            },
            name: TString(
                "",
            ),
            home_position: Point {
                x: 3426,
                y: 211,
            },
            is_homeless: False,
        },
        NPC {
            entity_type: Guide,
            position: Point {
                x: 30897,
                y: 6168,
            },
            name: TString(
                "Asher",
            ),
            home_position: Point {
                x: 1929,
                y: 388,
            },
            is_homeless: False,
        },
        NPC {
            entity_type: Merchant,
            position: Point {
                x: 34435,
                y: 3640,
            },
            name: TString(
                "Louis",
            ),
            home_position: Point {
                x: 2102,
                y: 229,
            },
            is_homeless: False,
        },
        NPC {
            entity_type: Nurse,
            position: Point {
                x: 34006,
                y: 3656,
            },
            name: TString(
                "Emma",
            ),
            home_position: Point {
                x: 2127,
                y: 231,
            },
            is_homeless: False,
        },
        NPC {
            entity_type: Angler,
            position: Point {
                x: 9471,
                y: 3592,
            },
            name: TString(
                "Bobby",
            ),
            home_position: Point {
                x: 606,
                y: 234,
            },
            is_homeless: False,
        },
        NPC {
            entity_type: Demolitionist,
            position: Point {
                x: 9656,
                y: 3592,
            },
            name: TString(
                "Urist",
            ),
            home_position: Point {
                x: 611,
                y: 227,
            },
            is_homeless: False,
        },
        NPC {
            entity_type: Dryad,
            position: Point {
                x: 10332,
                y: 3280,
            },
            name: TString(
                "Chryseis",
            ),
            home_position: Point {
                x: 616,
                y: 220,
            },
            is_homeless: False,
        },
        NPC {
            entity_type: ArmsDealer,
            position: Point {
                x: 9624,
                y: 3400,
            },
            name: TString(
                "Darius",
            ),
            home_position: Point {
                x: 602,
                y: 220,
            },
            is_homeless: False,
        },
        NPC {
            entity_type: Dd2bartender,
            position: Point {
                x: 34137,
                y: 3656,
            },
            name: TString(
                "Jerry",
            ),
            home_position: Point {
                x: 2159,
                y: 230,
            },
            is_homeless: False,
        },
        NPC {
            entity_type: DyeTrader,
            position: Point {
                x: 10342,
                y: 3272,
            },
            name: TString(
                "Hannibal",
            ),
            home_position: Point {
                x: 613,
                y: 215,
            },
            is_homeless: False,
        },
        NPC {
            entity_type: GoblinTinkerer,
            position: Point {
                x: 9514,
                y: 3403,
            },
            name: TString(
                "Grodax",
            ),
            home_position: Point {
                x: 607,
                y: 215,
            },
            is_homeless: False,
        },
    ],
)
