tests/snapshots/wld__parse_rooms.snap
---
source: tests/wld.rs
expression: PARSED_WORLD.rooms
---
RoomVec(
    [
        Room {
            entity_type: Guide,
            position: Position {
                x: 1932,
                y: 388,
            },
        },
        Room {
            entity_type: Dd2bartender,
            position: Position {
                x: 2159,
                y: 230,
            },
        },
    ],
)
