tests/snapshots/wld__parse_status_properties.snap
---
source: tests/wld.rs
expression: PARSED_WORLD.status.properties
---
Properties {
    tile_frame_importances: VariableTBitVec(
        BitVec<Lsb0, u8> [
            0b00011100,
            0b00111111,
            0b11111100,
            0b10111101,
            0b01111000,
            0b00100000,
            0b00100001,
            0b00000100,
            0b00000001,
            0b11100111,
            0b01111111,
            0b11111111,
            0b11111111,
            0b11100010,
            0b01100000,
            0b00000110,
            0b11001111,
            0b11110111,
            0b10000100,
            0b00000000,
            0b00000100,
            0b00011110,
            0b00100000,
            0b11110000,
            0b00000000,
            0b01000001,
            0b01101001,
            0b11111000,
            0b00011001,
            0b01011111,
            0b11111111,
            0b00000010,
            0b00000000,
            0b00000111,
            0b00011111,
            0b11110111,
            0b11111111,
            0b11111111,
            0b11111110,
            0b00101111,
            0b10011000,
            0b00000011,
            0b01110000,
            0b00000100,
            0b00111011,
            0b11111000,
            0b00001111,
            0b11101000,
            0b00111111,
            0b11110000,
            0b00000110,
            0b00111110,
            0b00011001,
            0b11011100,
            0b00011111,
            0b11111100,
            0b00001111,
            0b11000111,
            0b11111100,
        ],
    ),
    name: TString(
        "Foon",
    ),
    generator: GeneratorInfo {
        seed: TString(
            "1451234789",
        ),
        version: 833223655425,
    },
    uuid: TUuid(
        d578e106-3827-f648-a224-254c06ca78cb,
    ),
    id: 1468463142,
    bounds: Rect {
        left: 0,
        right: 67200,
        top: 0,
        bottom: 19200,
    },
    height: 1200,
    width: 4200,
    is_expert: False,
    created_on: 9860045932737703464,
    style: WorldStyle {
        moon: 1,
        trees: QuadrantStyle {
            x1: 3072,
            x2: 4200,
            x3: 4200,
            far_left: 4,
            near_left: 5,
            near_right: 0,
            far_right: 0,
        },
        moss: QuadrantStyle {
            x1: 1210,
            x2: 4200,
            x3: 4200,
            far_left: 1,
            near_left: 0,
            near_right: 3,
            far_right: 0,
        },
        underground_snow: 3,
        underground_jungle: 0,
        hell: 0,
    },
    spawn_point: Point {
        x: 2098,
        y: 229,
    },
    underground_level: 300.0,
    cavern_level: 528.0,
    current_time: 34958.0,
    is_daytime: True,
    moon_phase: 1,
    is_blood_moon: False,
    is_eclipse: False,
    dungeon_point: Point {
        x: 3426,
        y: 211,
    },
    evil_type: Corruption,
}
