tests/snapshots/wld__parse_status_status.snap
---
source: tests/wld.rs
expression: PARSED_WORLD.status.status
---
Status {
    bosses_slain: BossesSlain {
        eye_of_cthulhu: True,
        eater_of_worlds: True,
        skeletron: False,
        queen_bee: True,
        the_twins: False,
        the_destroyer: False,
        skeletron_prime: False,
        mechanical_boss: False,
        plantera: False,
        golem: False,
        king_slime: True,
    },
    saved_npcs: SavedNPCs {
        goblin_tinkerer: True,
        wizard: False,
        mechanic: False,
    },
    events_completed: EventsCompleted {
        goblin_army: True,
        clown: False,
        frost_moon: False,
        pirates: False,
    },
    shadow_orb_status: ShadowOrbStatus {
        smashed: True,
        meteorite_spawned: False,
        evil_boss_counter: 0,
    },
    smashed_altar_count: 0,
    is_hardmode: False,
    invasion_status: InvasionStatus {
        delay: 0,
        size: 0,
        invasion_type: NoInvasion,
        position: 0.000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000001371372158997,
        slime_rain_time_left: 0.0,
    },
    sundial_cooldown: 0,
    rain_status: RainStatus {
        is_active: False,
        time_left: 0,
        max_rain: NaN,
    },
    hardmode_ore_1: HardmodeOre {
        raw_value: -1,
        ore_type: UnknownOre,
    },
    hardmode_ore_2: HardmodeOre {
        raw_value: -1,
        ore_type: UnknownOre,
    },
    hardmode_ore_3: HardmodeOre {
        raw_value: 16778239,
        ore_type: UnknownOre,
    },
    backgrounds: Backgrounds {
        forest: 4,
        corruption: 1,
        jungle: 1,
        snow: 0,
        hallow: 2,
        crimson: 24,
        desert: 34,
        ocean: 1,
    },
    clouds: Clouds {
        background: -1577056768,
        count: -14943,
        wind_speed: 0.000000000000000000000000000000000000000000265,
    },
    angler_quest_status: AnglerQuestStatus {
        completed_players: [],
        angler_saved: True,
        target: EaterOfPlankton,
    },
    stylist_saved: False,
    tax_collector_saved: False,
    invasion_size_start: 120,
    cultist_delay: 0,
    mob_kills: MobKillVec(
        [
            0,
            0,
            0,
            0,
            9,
            0,
            0,
            85,
            0,
            0,
            0,
            0,
            0,
            1,
            8,
            0,
            0,
            0,
            2,
            4,
            0,
            0,
            0,
            0,
            0,
            102,
            0,
            281,
            0,
            10,
            0,
            0,
            5,
            0,
            0,
            0,
            0,
            0,
            36,
            45,
            34,
            4,
            69,
            4,
            0,
            2,
            0,
            7,
            0,
            0,
            1,
            8,
            0,
            0,
            2,
            16,
            0,
            0,
            0,
            0,
            0,
            14,
            0,
            0,
            11,
            0,
            0,
            3,
            0,
            271,
            4,
            31,
            0,
            0,
            0,
            0,
            3,
            0,
            0,
            5,
            1,
            0,
            0,
            0,
            13,
            0,
            0,
            264,
            0,
            0,
            20,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            9,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            45,
            202,
            0,
            0,
            0,
            0,
            52,
            0,
            31,
            0,
            0,
            0,
            67,
            46,
            0,
            1,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            7,
            0,
            0,
            0,
            0,
            2,
            0,
            0,
            0,
            27,
            0,
            0,
            0,
            53,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            9,
            0,
            0,
            12,
            2,
            0,
            0,
            0,
            2,
            0,
            1,
            12,
            0,
            0,
            0,
            21,
            0,
            0,
            0,
            1,
            0,
            2,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            2,
            25,
            5,
            38,
            40,
            9,
            0,
            14,
            20,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            1,
            0,
            0,
            0,
            0,
            0,
            9,
            0,
            0,
            0,
            0,
            0,
            0,
            4,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
        ],
    ),
    fast_forward_time: False,
    bosses_slain_2: BossesSlain2 {
        duke_fishron: False,
        martian_madness: False,
        lunatic_cultist: False,
        moon_lord: False,
        pumpking: False,
        mourning_wood: False,
        ice_queen: False,
        santa_nk1: False,
        everscream: False,
        solar_pillar: False,
        vortex_pillar: False,
        nebula_pillar: False,
        stardust_pillar: False,
    },
    pillar_status: PillarStatus {
        solar: False,
        vortex: False,
        nebula: False,
        stardust: False,
        is_active: False,
    },
    party_status: PartyStatus {
        party_center_is_active: False,
        natural_party_is_active: False,
        party_cooldown: 3,
        partying_npcs: PartyingNPCVec(
            [],
        ),
    },
    sandstorm_status: SandstormStatus {
        is_active: False,
        time_left: 0,
        severity: 0.19280446,
        intended_severity: 0.19280446,
    },
    bartender_saved: True,
    old_ones_army_status: OldOnesArmyStatus {
        tier1: False,
        tier2: False,
        tier3: False,
    },
}
