tests/snapshots/wld__parse_tile_entities.snap
---
source: tests/wld.rs
expression: PARSED_WORLD.tile_entities
---
TileEntities {
    count: 0,
    tile_entities: [],
}
